# Cenergia-Data

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile.fly  Makefile  README.md  fly.toml  pyproject.toml
.github/workflows/: ci.yml
data/: ember_pl_hourly.csv  model_lgbm.txt  model_meta.json
data/snapshot/: merit_order.parquet  price_daily.parquet  qa_overlap.parquet  recent_hourly.parquet  typical_shape.parquet
docs/adr/: 0001-duckdb-over-postgres.md  0002-plain-sql-over-dbt.md  0003-lightgbm-ceiling-no-mlflow.md  0004-runtime-live-over-cron.md
notebooks/: 01-market-eda.ipynb  02-price-drivers.ipynb  03-forecasting.ipynb
results/: backtest.csv  backtest_per_hour.csv  predictions.parquet
sql/: 01_staging_fx.sql  02_staging_price_pse.sql  03_staging_price_long.sql  04_staging_load.sql  05_staging_gen.sql  06_staging_res.sql  07_staging_weather.sql  10_marts_modeling.sql  11_marts_dashboard.sql  12_marts_qa.sql
src/cenergia/: analysis.py  paths.py  pipeline.py
src/cenergia/dashboard/: app.py  data_access.py  live.py
src/cenergia/features/: matrix.py
src/cenergia/ingest/: ember.py  nbp.py  openmeteo.py  pse.py
src/cenergia/models/: backtest.py  baselines.py  lgbm.py  metrics.py
src/cenergia/warehouse/: db.py
tests/: helpers.py
tests/fixtures/ember/: ember_raw_snippet.csv
tests/fixtures/nbp/: rates_chunk.json
tests/fixtures/openmeteo/: archive_city.json  forecast_city.json
tests/fixtures/pse/: csdac_page1.json  (+4 more)
tests/integration/: test_end_to_end.py
tests/unit/: test_analysis.py  test_package.py  test_pipeline.py  test_validate.py
(+22 files in other folders)
