[project]
name = "cenergia"
version = "0.1.0"
description = "Analytics and day-ahead price forecasting for the Polish electricity market"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas>=2.2",
    "pyarrow>=18",
    "duckdb>=1.1",
    "requests>=2.32",
    "lightgbm>=4.5",
    "scikit-learn>=1.5",
    "holidays>=0.60",
    "streamlit>=1.40",
    "plotly>=5.24",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "ruff>=0.8",
    "mypy>=1.13",
    "pandas-stubs>=2.2",
    "types-requests>=2.32",
    "jupyter>=1.1",
    "nbconvert>=7.16",
    "matplotlib>=3.9",
    "seaborn>=0.13",
    "statsmodels>=0.14",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cenergia"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "RUF"]

[tool.mypy]
python_version = "3.13"
strict = true
files = ["src", "tests"]

[[tool.mypy.overrides]]
module = [
    "lightgbm.*",
    "holidays.*",
    "plotly.*",
    "seaborn.*",
    "statsmodels.*",
    "sklearn.*",
    "streamlit.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
